This fixes the problem of little boxes appearing in Gmail when you don't have Arial Unicode MS installed.

The problem is that we don't find a font that defines the LTR character. We map this to the 0 glyph, which then renders as a box. We want normal characters that aren't found to render as a box so the user will know that there are characters there that they aren't seeing. We just don't want a few particular ones to ever appear.

The same thing happens when we encounter a real zero width space character, which is even more bizarre.

This change maps all characters that should be treated as spaces to spaces, and all widths for zero widths characters to be zero width.

WebKit bug https://bugs.webkit.org/show_bug.cgi?id=20237

BUG=1166024

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@183 0039d316-1c4b-4281-b951-d872f2087c98